--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -8,7 +8,7 @@
     <title>Home Page</title>
 </head>
 <div>
-    <h1>Lorem Ipsum dolor or something idk what to put here? <b>No.</b> <b></b></h1>
+    <h1>Hvem vil du smashe?</h1>
     <h2>Click on one of the two</h2>
     {% if e1 and e2 %}
     <div class="parent">
